<resources>
    <string name="app_name">BharatAgro</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="for_crop_data">for crop data</string>

<!--  String for the Profile section  -->
    <string name="username">Anshuman Behera</string>
    <string name="bio">As a dedicated farmer, I passionately cultivate healthy and bountiful crops using sustainable practices. I focus on maintaining soil fertility and using eco-friendly techniques to ensure high-quality produce. By integrating modern technology with traditional methods, I aim to achieve optimal yields. Sharing knowledge with fellow farmers, I contribute to improving our community’s agricultural productivity</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="anshuman">Anshuman</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="_21">21</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_07_02_2003">07/02/2003</string>
    <string name="mobile">Mobile</string>
    <string name="_91_9000000009">+91 9000000009</string>
    <string name="email">Email</string>
    <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
    <string name="textview">TextView</string>
    <string name="web_clint_id_google">749206661467-3asn0kgcbsu6ie8pm2mua21glah5ele8.apps.googleusercontent.com</string>

</resources>